k8/dev/questmaster/gateway/app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: questmaster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: labs.liminal/gateway:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
