k8/dev/questmaster/gateway/app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: questmaster
spec:
  type: NodePort
  selector:
    app: gateway
  ports:
    - port: 8080
      targetPort: 8080
